# legacy_embedded_modernization

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  controller.cpp  controller.h  fix_clock_skew.sh  main.cpp  run_experiments.sh  sensor.cpp  sensor.h  system.cpp
paper/: .gitignore  paper.tex  references.bib
tests/: test_sensor.cpp
